<resources>
    <string name="app_name">EffectiveTestProject</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_cart">Cart</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_in">Sign in</string>
    <string name="sign_in_button">Sign in</string>
    <string name="email_hint">Email</string>
    <string name="last_name_hint">Last name</string>
    <string name="first_name_hint">First name</string>
    <string name="welcome_back_title">Welcome back</string>
    <string name="password_hint">Password</string>
    <string name="image_content_desc">image</string>
    <string name="profile_title">Profile</string>
    <string name="change_photo_hint">Change photo</string>
    <string name="name_placeholder">Satria Adhi Pradana</string>
    <string name="menu_content_desc">menu</string>
    <string name="home_fragment_a_title">Trade by bata</string>
    <string name="location_title">Location</string>
    <string name="phones_title">Phones</string>
    <string name="headphones_title">Headphones</string>
    <string name="games_title">Games</string>
    <string name="cars_title">Cars</string>
    <string name="furniture_title">Furniture</string>
    <string name="kids_title">Kids</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="latest_title">Latest</string>
    <string name="view_all_title">View all</string>
    <string name="flash_sale_title">Flash sale</string>
    <string name="background_cards">background</string>
    <string name="item_name_placeholder">Samsung S10</string>
    <string name="price_placeholder">$ 180,000</string>
    <string name="return_btn_content_desc">return_btn</string>
    <string name="add_to_fav_content_desc">add_to_fav</string>
    <string name="divider_content_desc">divider</string>
    <string name="share_item_content_desc">share_item</string>
    <string name="item_image_content_desc">item_image</string>
    <string name="item_selected_name_placeholder">New Balance Sneakers</string>
    <string name="desc_placeholder">Features waterproof, fire, air resistant shoes.all changed when the country of fire attacked</string>
    <string name="item_selected_price_placeholder">$ 22.50</string>
    <string name="reviews_icon_content_desc">reviews_icon</string>
    <string name="reviews_mark_placeholder">3.9</string>
    <string name="count_of_reviews_placeholder">(4000 reviews)</string>
    <string name="color_placeholder">Color</string>
    <string name="quantity_title">Quantity:</string>
    <string name="btn_add_to_cart_placeholder">$2,500 Add to cart</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="brands_title">Brands</string>
    //
</resources>