<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.passerby.effectivetestproject.presentation.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="dev.passerby.effectivetestproject.presentation.fragments.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="dev.passerby.effectivetestproject.presentation.fragments.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="dev.passerby.effectivetestproject.presentation.fragments.MessageFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="dev.passerby.effectivetestproject.presentation.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_cart" />
</navigation>