<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/latest_container"
    android:layout_width="112dp"
    android:layout_height="148dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="16dp">

    <ImageView
        android:id="@+id/home_a_image_1_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_cards"
        android:scaleType="fitXY"
        android:background="@color/et_background"
        tools:src="@drawable/rectangle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="8dp"
        tools:ignore="SmallSp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="@string/phones_title"
            android:textColor="@color/black"
            android:textSize="8sp"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/item_name_placeholder"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/price_placeholder"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:textSize="8sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="#EEEFF4"
                android:src="@drawable/ic_plus"
                app:contentPadding="4dp"
                app:shapeAppearance="@style/shape" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>