<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SignInFragment">

    <TextView
        android:id="@+id/sign_in_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/title_sign_in"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_first_name_et"
        style="@style/et_style"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/et_background"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_title_tv"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_last_name_et"
        style="@style/et_style"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/et_background"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_first_name_et"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_email_et"
        style="@style/et_style"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/et_background"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_last_name_et"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/btn_background"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in_button"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_email_et"
        app:layout_constraintStart_toStartOf="@+id/sign_in_email_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email_et" />

    <TextView
        android:id="@+id/sign_it_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
        tools:text="Already have an account? Log in" />

</androidx.constraintlayout.widget.ConstraintLayout>